# poke-quant

./: .cursorignore  .gitignore  pyproject.toml  supabase_client.py
data/raw_html/: sample_search_results.html
docs/: CURATED_SCRAPING_GUIDE.md  ENHANCED_OUTLIER_FILTERING_SUMMARY.md  LLM_ENHANCED_FILTERING_GUIDE.md  POKEQUANT_ROADMAP.md  architecture.md  ebay_scraper.md  poke-scraper.md  quant.md
ebay-scraper/: ebay_parser.py  ebay_search.py  ebay_to_supabase.py  scrape_ebay.py  utils.py
poke-scraper/: constants.py  sync_to_supabase.py
poke-scraper/data/: cards_base2.json  cards_base3.json  cards_base4.json  cards_basep.json  cards_bw1.json  cards_bw10.json  cards_bw2.json  cards_bw3.json  cards_bw6.json  cards_bw7.json  cards_bwp.json  cards_cel25.json  cards_cel25c.json  cards_dp1.json  cards_dp2.json  cards_dp3.json  cards_dp4.json  cards_dp5.json  cards_dp7.json  cards_dpp.json  cards_ecard1.json  cards_ex1.json  cards_ex10.json  cards_ex11.json  cards_ex16.json  cards_ex3.json  cards_ex5.json  (+64 more)
quant/: ENHANCED_POKEQUANT_GUIDE.md  __init__.py  analyze_filtering_strictness.py  clean_existing_data.py  data_preparation.py  enhanced_outlier_filter.py  freshness_checker.py  investigate_high_removal_rate.py  investigate_outliers.py  llm_enhanced_filter.py  pokequant_main.py  price_data_service.py  requirements.txt  test_analysis_caching.py  test_enhanced_filtering.py  test_filtering_at_storage.py  test_integration.py  test_llm_filtering.py
roadmap/: architecture.md  poke-scraper.md
scripts/: run_pokequant_test.py
tests/: test_enhanced_analysis.py
(+149 files in other folders)
