[tool.poetry]
name = "pokequant"
version = "0.1.0"
description = "Pokemon card quantitative analysis system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "pokequant"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
supabase = "^2.0.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
pandas = "^2.1.0"
numpy = "^1.24.0"
openai = "^1.3.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
requests = "^2.31.0"
aiohttp = "^3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
] 